--- a/_includes/bottom.haml
+++ b/_includes/bottom.haml
@@ -5,15 +5,15 @@
       .divider
       %ul.no-style.footer-links
         %li
-          %a{href: '#'} Twitter
+          %a{href: 'javascript:void(0);'} Twitter
         %li
-          %a{href: '#'} GitHub
+          %a{href: 'javascript:void(0);'} GitHub
         %li
-          %a{href: '#'} Facebook
+          %a{href: 'javascript:void(0);'} Facebook
         %li
-          %a{href: '#'} LinkedIn
+          %a{href: 'javascript:void(0);'} LinkedIn
         %li
-          %a{href: '#'} Instagram
+          %a{href: 'javascript:void(0);'} Instagram
 
     .work
       %h6 Recent Tweets
