--- a/_includes/footer.haml
+++ b/_includes/footer.haml
@@ -1,14 +1,14 @@
 %footer.site-footer
   %ul.footer-links.uppercase
     %li
-      %a{href: 'javascript:void(0);'} Home
+      %a{href: '{{ site.url }}'} Home
     %li
-      %a{href: 'javascript:void(0);'} Blog
+      %a{href: '{{ site.url }}/blog'} Blog
     %li
-      %a{href: 'javascript:void(0);'} Projects
+      %a{href: '{{ site.url }}/projects'} Projects
     %li
-      %a{href: 'javascript:void(0);'} Resume
+      %a{href: '{{ site.url }}/resume'} Resume
     %li
-      %a{href: 'javascript:void(0);'} Contact
+      %a{href: '{{ site.url }}/contact'} Contact
     %li
       %span.copyright © {{ "today" | date: "%Y" }} DEEPAK MAHAKALE
