--- a/_includes/menu.haml
+++ b/_includes/menu.haml
@@ -16,17 +16,17 @@
 .menu-wrapper
   %nav.menu
     .list-items.uppercase
-      %a.underline-effect{href: '#'}
+      %a.underline-effect{href: '{{ site.url }}'}
         %span Home
       %br
-      %a.underline-effect{href: '#'}
+      %a.underline-effect{href: '{{ site.url }}/blog'}
         %span Blogs
       %br
-      %a.underline-effect{href: '#'}
+      %a.underline-effect{href: '{{ site.url }}/projects'}
         %span Projects
       %br
-      %a.underline-effect{href: '#'}
+      %a.underline-effect{href: '{{ site.url }}/resume'}
         %span Resume
       %br
-      %a.underline-effect{href: '#'}
+      %a.underline-effect{href: '{{ site.url }}/contact'}
         %span Contact
