About page and GA code

--- a/_includes/footer.haml
+++ b/_includes/footer.haml
@@ -7,7 +7,7 @@
     %li
       %a{href: '{{ site.url }}/projects'} Projects
     %li
-      %a{href: '{{ site.url }}/resume'} Resume
+      %a{href: '{{ site.url }}/about'} About
     %li
       %a{href: '{{ site.url }}/contact'} Contact
     %li
