--- a/_includes/menu.haml
+++ b/_includes/menu.haml
@@ -25,8 +25,8 @@
       %a.underline-effect{href: '{{ site.url }}/projects'}
         %span Projects
       %br
-      %a.underline-effect{href: '{{ site.url }}/resume'}
-        %span Resume
+      %a.underline-effect{href: '{{ site.url }}/about'}
+        %span About
       %br
       %a.underline-effect{href: '{{ site.url }}/contact'}
         %span Contact
