--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,6 @@
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
-    {%- include google-analytics.html -%}
+    {%- include google-analytics.haml -%}
   {%- endif -%}
 </head>
