--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@
 
   <body>
 
-    {%- haml menu.haml -%}
+    {%- include menu.haml -%}
     <header class="page-header">
       <div class="wrapper">
         <h1>{{ page.title }}</h1>
@@ -18,8 +18,8 @@
       </div>
     </main>
 
-    {%- haml bottom.haml -%}
-    {%- haml footer.haml -%}
+    {%- include bottom.haml -%}
+    {%- include footer.haml -%}
 
   </body>
 
