--- a/_includes/bottom.haml
+++ b/_includes/bottom.haml
@@ -7,13 +7,42 @@
         %li
           %a{href: 'javascript:void(0);'} Twitter
         %li
-          %a{href: 'javascript:void(0);'} GitHub
-        %li
           %a{href: 'javascript:void(0);'} Facebook
+        %li
+          %a{href: 'javascript:void(0);'} Instagram
+        %li
+          %a{href: 'javascript:void(0);'} GitHub
         %li
           %a{href: 'javascript:void(0);'} LinkedIn
         %li
-          %a{href: 'javascript:void(0);'} Instagram
+          %a{href: 'javascript:void(0);'} Stack Overflow
+
+      {%- assign social = site.social_links -%}
+      %ul.social-media-list
+        %li
+          %a{href: "https://twitter.com/{{ social.twitter | cgi_escape | escape }}", rel: "me", title: "{{ social.twitter | escape }}"}
+            %svg.svg-icon.grey
+              %use{"xlink:href": "{{ '/assets/social-icons.svg#twitter' | relative_url }}"}
+        %li
+          %a{href: "https://www.facebook.com/{{ social.facebook | cgi_escape | escape }}", rel: "me", title: "{{ social.facebook | escape }}"}
+            %svg.svg-icon.grey
+              %use{"xlink:href": "{{ '/assets/social-icons.svg#facebook' | relative_url }}"}
+        %li
+          %a{href: "https://www.instagram.com/{{ social.instagram | cgi_escape | escape }}", rel: "me", title: "{{ social.instagram | escape }}"}
+            %svg.svg-icon.grey
+              %use{"xlink:href": "{{ '/assets/social-icons.svg#instagram' | relative_url }}"}
+        %li
+          %a{href: "https://github.com/{{ social.github | cgi_escape | escape }}", rel: "me", title: "{{ social.github | escape }}"}
+            %svg.svg-icon.grey
+              %use{"xlink:href": "{{ '/assets/social-icons.svg#github' | relative_url }}"}
+        %li
+          %a{href: "https://www.linkedin.com/in/{{ social.linkedin | cgi_escape | escape }}", rel: "me", title: "{{ social.linkedin | escape }}"}
+            %svg.svg-icon.grey
+              %use{"xlink:href": "{{ '/assets/social-icons.svg#linkedin' | relative_url }}"}
+        %li
+          %a{href: "https://stackoverflow.com/users/{{ social.stackoverflow | cgi_escape | escape }}", rel: "me", title: "{{ social.stackoverflow | escape }}"}
+            %svg.svg-icon.grey
+              %use{"xlink:href": "{{ '/assets/social-icons.svg#stackoverflow' | relative_url }}"}
 
     .work
       %h6 Recent Tweets
