--- a/_sass/custom/_layout.scss
+++ b/_sass/custom/_layout.scss
@@ -78,6 +78,14 @@
         text-align: center;
         margin-bottom: 30px;
       }
+
+      .footer-links {
+        display: auto;
+
+        @include media-query($on-palm) {
+          display: none;
+        }
+      }
     }
     .work {
       float: left;
@@ -182,20 +190,19 @@ h6 {
       display: inline;
       padding-left: 10px;
       @include media-query($on-palm) {
-        display: block;
         padding: 0;
       }
     }
-    li:not(:first-child):not(:last-child):before {
+    li:not(:first-child):before {
       margin-right: 10px;
       content: "•";
       @include media-query($on-palm) {
-        margin: 0;
-        content: "";
+        margin: 5px;
       }
     }
   }
   .copyright {
+    font-size: 11px;
     padding-left: 20px;
     color: $blue-color;
 
