--- a/_sass/custom/_layout.scss
+++ b/_sass/custom/_layout.scss
@@ -164,7 +164,8 @@ h6 {
 }
 
 // footer
-.footer-links {
+
+.footer-links, .recent-tweets {
   a {
     color: $footer-text-color;
     text-decoration: none;
