--- a/_sass/custom/_layout.scss
+++ b/_sass/custom/_layout.scss
@@ -90,6 +90,7 @@
     .work {
       float: left;
       width: 50%;
+      min-height: 220px;
       @include media-query($on-palm) {
         width: 100%;
         text-align: center;
