Add mailto for contact

--- a/_includes/footer.haml
+++ b/_includes/footer.haml
@@ -9,5 +9,5 @@
     %li
       %a{href: '{{ site.url }}/about'} About
     %li
-      %a{href: '{{ site.url }}/contact'} Contact
+      %a{href: 'mailto:hello@deepakmahakale.in'} Contact
   %span.copyright © {{ "today" | date: "%Y" }} DEEPAK MAHAKALE
