--- a/_includes/menu.haml
+++ b/_includes/menu.haml
@@ -28,5 +28,5 @@
       %a.underline-effect{href: '{{ site.url }}/about'}
         %span About
       %br
-      %a.underline-effect{href: '{{ site.url }}/contact'}
+      %a.underline-effect{href: 'mailto:hello@deepakmahakale.in'}
         %span Contact
