--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -59,5 +59,6 @@ $on-laptop:        800px !default;
   "custom/effects",
   "custom/about",
   "custom/social",
+  "custom/projects",
   "hamburgers/hamburgers";
 ;
