--- a/_includes/bottom.haml
+++ b/_includes/bottom.haml
@@ -54,7 +54,7 @@
           \ · {{ tweet.created_at | date: "%b %d, %y" }}
           %br
           %br
-          {{ tweet.text | truncate: 130, '...' }}
+          {{ tweet.text | newline_to_br | strip_newlines | truncate: 170, '...' }}
           %br
           \ [
           %a{href: "{{tweet.url}}", target: :_blank, onclick:"window.open('{{tweet.url}}','popup','width=600,height=600'); return false;" } Link
