--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,9 @@
   {%- include head.html -%}
 
   <body>
-
+    {%- if jekyll.environment == 'production' and site.google_tag_manager_id -%}
+    {%- include tag_manager_script.html -%}
+    {%- endif -%}
     {%- include menu.haml -%}
     {%- include header.haml -%}
 
