--- a/_includes/header.haml
+++ b/_includes/header.haml
@@ -1,5 +1,12 @@
-%header.site-header{role: 'banner'}
-  .banner-text
-    %h1
-      Hi, I am
-      %strong= ' Deepak'
+%header.site-header{role: 'banner' }
+  .wrapper
+    .banner-image
+      %img{ src: '/assets/images/profile_picture.png' }
+    .banner-text
+      %h1
+        Hi, I am
+        %strong= ' Deepak'
+    %h5
+      Software professional with over
+      %strong= ' 8 years '
+      of experience in the software development industry.
