--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,9 +4,10 @@ layout: default
 
 <div class="home">
   <div class="check-out-blog">
-    <h5>Check out the blog
-      <a href="/blog">
-        <span style="color:#FF664C;"><strong>here »</strong></span>
+    <h5>
+      I share my thoughts and ruby tips
+      <a href="/blog" class="orange">
+        <strong>here »</strong>
       </a>
     </h5>
   </div>
