--- a/_sass/custom/_base.scss
+++ b/_sass/custom/_base.scss
@@ -44,6 +44,25 @@ main {
 }
 
 /**
+ * Images
+ */
+ img {
+  max-width: 100%;
+  vertical-align: middle;
+}
+
+/**
+ * Figures
+ */
+figure > img {
+  display: block;
+}
+
+figcaption {
+  font-size: $small-font-size;
+}
+
+/**
  * Lists
  */
 ul, ol {
@@ -87,21 +106,51 @@ a {
   }
 }
 
+a.no-style {
+  text-decoration: none;
+  color: inherit;
+}
+
 /**
  * Blockquotes
  */
-// blockquote {
-//   color: $grey-color;
-//   border-left: 4px solid $grey-color-light;
-//   padding-left: $spacing-unit / 2;
-//   @include relative-font-size(1.125);
-//   letter-spacing: -1px;
-//   font-style: italic;
+blockquote {
+  color: $grey-color;
+  border-left: 4px solid $grey-color-light;
+  padding-left: $spacing-unit / 2;
+  @include relative-font-size(1.125);
+  letter-spacing: -1px;
+  font-style: italic;
 
-//   > :last-child {
-//     margin-bottom: 0;
-//   }
-// }
+  > :last-child {
+    margin-bottom: 0;
+  }
+}
+
+/**
+ * Code formatting
+ */
+ pre, code {
+  font-size: 15px;
+  border: 1px solid $grey-color-light;
+  border-radius: 3px;
+  background-color: #eef;
+}
+
+code {
+  padding: 1px 5px;
+}
+
+pre {
+  padding: 8px 12px;
+  overflow-x: auto;
+
+  > code {
+      border: 0;
+      padding-right: 0;
+      padding-left: 0;
+  }
+}
 
 /**
  * Wrapper
