--- a/_includes/menu.haml
+++ b/_includes/menu.haml
@@ -20,7 +20,7 @@
         %span Home
       %br
       %a.underline-effect{href: '{{ site.url }}/blog'}
-        %span Blogs
+        %span Blog
       %br
       %a.underline-effect{href: '{{ site.url }}/about'}
         %span About
