--- a/_includes/header.haml
+++ b/_includes/header.haml
@@ -1,7 +1,7 @@
 %header.site-header{role: 'banner' }
   .wrapper
     .banner-image
-      %img{ src: '/assets/images/profile_picture.png', alt: 'Profile picture of Deepak' }
+      %img{ src: '/assets/images/profile_picture.png', loading: 'lazy', alt: 'Profile picture of Deepak' }
     .banner-text
       %h1
         Hi, I am
