--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -1,11 +1,11 @@
 @charset "utf-8";
 
 // Define defaults for each variable.
-$base-font-family: 'Open Sans', sans-serif;
-$base-font-size:   16px;
-$base-font-weight: 400;
+$base-font-family: "Montserrat", sans-serif;
+$base-font-size:   18px;
+$base-font-weight: 300;
 $small-font-size:  $base-font-size * 0.875;
-$base-line-height: 22px;
+$base-line-height: 32px;
 $spacing-unit:     30px;
 
 // global
