--- a/_sass/custom/_layout.scss
+++ b/_sass/custom/_layout.scss
@@ -29,7 +29,7 @@
   background-color: #eeeeee;
   padding: 20px 0 15px;
   color: #4c5365;
-  h1 {
+  .site-title {
     font-family: "Montserrat", sans-serif;
     font-weight: 300;
     font-size: 28px;
@@ -106,7 +106,7 @@
 
 h1 {
   font-family: "Montserrat", sans-serif;
-  font-weight: 300;
+  font-weight: 700;
   font-size: 28px;
   line-height: 38px;
 }
