software development industry -> IT industry

--- a/_includes/header.haml
+++ b/_includes/header.haml
@@ -9,4 +9,4 @@
     %h5
       Software professional with over
       %strong= ' 8 years '
-      of experience in the software development industry.
+      of experience in the IT industry.
