--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
   <link rel="manifest" href="/site.webmanifest">
   {%- seo -%}
   <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,700|Open+Sans:400,400i,600" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
 
   <script src="https://code.jquery.com/jquery-3.5.0.min.js"
