--- a/_sass/custom/_social.scss
+++ b/_sass/custom/_social.scss
@@ -12,9 +12,9 @@
   li {
     a {
       display: block;
-      padding: $spacing-unit / 4;
+      padding: 0 4.5px;
       border: 1px solid currentColor;
-      border-radius: 19.5px;
+      border-radius: 17.5px;
     }
   }
 }
