--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
     {%- if jekyll.environment == 'production' and site.google_tag_manager_id -%}
     {%- include tag_manager_script.html -%}
     {%- endif -%}
-    {%- include menu.haml -%}
-    {%- include header.haml -%}
+    {%- include menu.html -%}
+    {%- include header.html -%}
 
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
@@ -16,8 +16,8 @@
       </div>
     </main>
 
-    {%- include bottom.haml -%}
-    {%- include footer.haml -%}
+    {%- include bottom.html -%}
+    {%- include footer.html -%}
 
   </body>
 
