--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@
     {%- if jekyll.environment == 'production' and site.google_tag_manager_id -%}
     {%- include tag_manager_script.html -%}
     {%- endif -%}
-    {%- include menu.haml -%}
+    {%- include menu.html -%}
     <header class="page-header">
       <div class="wrapper">
         <h1>{{ page.title }}</h1>
@@ -20,8 +20,8 @@
       </div>
     </main>
 
-    {%- include bottom.haml -%}
-    {%- include footer.haml -%}
+    {%- include bottom.html -%}
+    {%- include footer.html -%}
 
   </body>
 
