--- a/_sass/custom/_layout.scss
+++ b/_sass/custom/_layout.scss
@@ -217,3 +217,25 @@ h6 {
     }
   }
 }
+
+.alert+.alert {
+  margin-top: 1rem;
+}
+
+.alert {
+  position: relative;
+  padding: .75rem 1.25rem;
+  margin-bottom: 1rem;
+  border: 1px solid transparent;
+  border-radius: .25rem;
+}
+.alert-info {
+  color: #0c5460;
+  background-color: #d1ecf1;
+  border-color: #bee5eb;
+}
+.alert-success {
+  color: #155724;
+  background-color: #d4edda;
+  border-color: #c3e6cb;
+}
